--- a/app/src/main/res/layout/dialog_edit_bookshelf_filters_content.xml
+++ b/app/src/main/res/layout/dialog_edit_bookshelf_filters_content.xml
@@ -78,7 +78,7 @@
             style="?attr/buttonBarNegativeButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@android:string/cancel"
+            android:text="@string/cancel"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/btn_positive"
             />
