--- a/app/src/main/res/layout-land/fragment_booksearch_by_text.xml
+++ b/app/src/main/res/layout-land/fragment_booksearch_by_text.xml
@@ -126,7 +126,7 @@
         <Button
             android:id="@+id/btn_search"
             style="@style/Button.Action.Submit"
-            android:text="@android:string/search_go"
+            android:text="@string/action_search"
             app:icon="@drawable/search_24px"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/lbl_publisher"
