--- a/app/src/main/res/layout/fragment_booksearch_by_external_id.xml
+++ b/app/src/main/res/layout/fragment_booksearch_by_external_id.xml
@@ -134,7 +134,7 @@
         <Button
             android:id="@+id/btn_search"
             style="@style/Button.Action.Submit"
-            android:text="@android:string/search_go"
+            android:text="@string/action_search"
             app:icon="@drawable/search_24px"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="@id/lbl_external_id"
