--- a/app/src/main/res/menu/sav_search.xml
+++ b/app/src/main/res/menu/sav_search.xml
@@ -28,7 +28,7 @@
     <item
         android:id="@id/MENU_SEARCH"
         android:orderInCategory="@integer/MENU_ORDER_SEARCH"
-        android:title="@android:string/search_go"
+        android:title="@string/action_search"
         app:actionViewClass="android.widget.SearchView"
         app:showAsAction="ifRoom" />
 </menu>
